titel und schrift angepasst

--- a/chronik.tex
+++ b/chronik.tex
@@ -23,8 +23,8 @@ openany,
 \setmainfont{Recia}
 %\setsansfont{Author}
 %\setsansfont{Switzer} %zu modern
-\setsansfont{Myriad Pro}
-%\setsansfont{Merriweather Sans}
+%\setsansfont{Myriad Pro} %ziemlich fett
+\setsansfont{Merriweather Sans}
 
 \renewcommand{\printtoctitle}[1]{\LARGE\sffamily\bfseries #1}
 \renewcommand{\cftchapterfont}{\sffamily\bfseries}
@@ -118,7 +118,7 @@ openany,
 \settocdepth{subsection}
 
 \author{}
-\title{\sffamily\Huge Chronik zum 200-jährigen Bestehen der Schützenbruderschaft St. Hubertus Niederense 1824 e.V.}
+\title{\sffamily\Huge Chronik anlässlich des\\200-jährigen Bestehens\\der Schützenbruderschaft\\St. Hubertus 1824 Niederense}
 \date{\sffamily Herausgegeben im Juli 2024}
 
 \begin{document}
