--- a/info.tex
+++ b/info.tex
@@ -3,7 +3,7 @@
 \footnotesize
 \parindent 0pt
 \parskip \baselineskip
-\textcopyright{} 2024 Schützenbruderschaft St. Hubertus Niederense 1824 e.V.
+\textcopyright{} 2024 Schützenbruderschaft St. Hubertus 1824 Niederense e.V.
 
 Alle Rechte vorbehalten.
 
