--- a/chronik.tex
+++ b/chronik.tex
@@ -5,175 +5,26 @@ onecolumn,
 openany,
 ]{memoir}
 
-\usepackage{fontspec}
-\usepackage[raggedright,bf,sf]{titlesec}
-\usepackage{titletoc}
-\usepackage{titling}
-\usepackage{nameref}
-\usepackage[german]{babel} % English please
-\usepackage[final]{microtype} % Less badboxes
-\usepackage{graphicx} % Include figures
-\usepackage{lipsum} % Just to put in some text
-\usepackage{xcolor}
-\usepackage{caption}
-
-%\usepackage{merriweather}
-%\usepackage{librecaslon} % Caslon font
-
-\setmainfont{Recia}
-%\setsansfont{Author}
-%\setsansfont{Switzer} %zu modern
-%\setsansfont{Myriad Pro} %ziemlich fett
-\setsansfont{Merriweather Sans}
-
-\renewcommand{\printtoctitle}[1]{\LARGE\sffamily\bfseries #1}
-\renewcommand{\cftchapterfont}{\sffamily\bfseries}
-\renewcommand{\cftchapterpagefont}{\sffamily\bfseries}
-\renewcommand{\cftsectionfont}{\sffamily}
-\renewcommand{\cftsectionpagefont}{\sffamily}
-\renewcommand{\cftsubsectionfont}{\sffamily}
-\renewcommand{\cftsubsectionpagefont}{\sffamily}
-\renewcommand{\cftsubsubsectionfont}{\sffamily}
-\renewcommand{\cftsubsubsectionpagefont}{\sffamily}
-\renewcommand{\printloftitle}[1]{\LARGE\sffamily #1}
-\renewcommand{\cftfigurefont}{\sffamily}
-\renewcommand{\cftfigurepagefont}{\sffamily}
-\renewcommand{\printlottitle}[1]{\LARGE\sffamily #1}
-\renewcommand{\cfttablefont}{\sffamily}
-\renewcommand{\cfttablepagefont}{\sffamily}
-
-\newcommand{\tabref}[1]{Tabelle \ref{#1}: \nameref{#1}}
-
-\captionsetup{%
-  font={normalsize}, % small font size
-  labelfont={it},      % label in bold, sans-serif
-  textfont={it},
-  singlelinecheck=true, % centered single-lined captions
-  format=plain,             % indention=1cm,
-  labelsep={colon},         % default separator: none, colon, period, space, quad, newline, endash
-}
-
-\titleformat{\chapter}[display]{\sffamily\bfseries\LARGE}{\raggedleft\HUGE\textcolor{gray}{\normalfont\thechapter}}{0.5em}{}[\titlerule]
-\titleformat*{\section}{\sffamily\LARGE}
-\titleformat*{\subsection}{\sffamily\Large}
-\titleformat*{\subsubsection}{\sffamily\large}
-\titleformat*{\paragraph}{\sffamily\large}
-\titleformat*{\subparagraph}{\sffamily\large}
-
-\setlrmarginsandblock{0.15\paperwidth}{*}{1} % Left and right margin
-\setulmarginsandblock{0.2\paperwidth}{*}{1}  % Upper and lower margin
-\checkandfixthelayout
-
-\maxsecnumdepth{subsection} % Subsections (and higher) are numbered
-\setsecnumdepth{subsection}
-
-\chapterstyle{standard}
-
-\makeatletter                  % You do not need to write [htpb] all the time
-\renewcommand\fps@figure{htbp} %
-\renewcommand\fps@table{htbp}  %
-\makeatother                   %
-
-%%% HEADER AND FOOTER 
-%%%------------------------------------------------------------------------------
-
-\makepagestyle{standard} % Make standard pagestyle
-
-\makeatletter                 % Define standard pagestyle
-\makeevenfoot{standard}{\small\sffamily\thepage}{}{} %
-\makeoddfoot{standard}{}{}{\small\sffamily\thepage}  %
-\makeevenhead{standard}{\textcolor{gray}{\sffamily\small\leftmark}}{}{}
-\makeoddhead{standard}{}{}{\textcolor{gray}{\sffamily\small\rightmark}}
-\makeheadrule{standard}{\textwidth}{\normalrulethickness}
-\makeatother                  %
-
-\makeatletter
-\makepsmarks{standard}{
-\createmark{chapter}{both}{shownumber}{}{ \quad }
-\createmark{section}{right}{shownumber}{}{ \quad }
-\createplainmark{toc}{both}{\contentsname}
-\createplainmark{lof}{both}{\listfigurename}
-\createplainmark{lot}{both}{\listtablename}
-\createplainmark{bib}{both}{\bibname}
-\createplainmark{index}{both}{\indexname}
-\createplainmark{glossary}{both}{\glossaryname}
-}
-\makeatother                               %
-
-\makepagestyle{chap} % Make new chapter pagestyle
-
-\makeatletter
-\makeevenfoot{chap}{\small\sffamily\thepage}{}{} % Define new chapter pagestyle
-\makeoddfoot{chap}{}{}{\small\sffamily\thepage}  %
-\makeevenhead{chap}{}{}{}   %
-\makeoddhead{chap}{}{}{}    %
-%\makeheadrule{chap}{\textwidth}{\normalrulethickness}
-\makeatother
-
-\nouppercaseheads
-\pagestyle{standard}               % Choosing pagestyle and chapter pagestyle
-\aliaspagestyle{chapter}{chap} %
-
-\maxtocdepth{subsection} % Only parts, chapters and sections in the table of contents
-\settocdepth{subsection}
-
-\author{}
-\title{\sffamily\Huge Chronik anlässlich des\\200-jährigen Bestehens\\der Schützenbruderschaft\\St. Hubertus 1824 Niederense}
-\date{\sffamily Herausgegeben im Juli 2024}
+\input{strukturseiten/einstellungen.tex}
 
 \begin{document}
-
 \raggedbottom
 
 \frontmatter
-
 \maketitle
-
-\include{info.tex}
-
-\cleartooddpage
-
-\tableofcontents*
-
-\cleartooddpage
-
-\chapter{Vorwort}
-
-Dies ist ein Typoblindtext. An ihm kann man sehen, ob alle Buchstaben da sind und wie sie aussehen. Manchmal benutzt man Worte wie Hamburgefonts, Rafgenduks oder Handgloves, um Schriften zu testen. Manchmal Sätze, die alle Buchstaben des Alphabets enthalten - man nennt diese Sätze »Pangrams«. Sehr bekannt ist dieser: The quick brown fox jumps over the lazy old dog. Oft werden in Typoblindtexte auch fremdsprachige Satzteile eingebaut (AVAIL® and Wefox™ are testing aussi la Kerning), um die Wirkung in anderen Sprachen zu testen. In Lateinisch sieht zum Beispiel fast jede Schrift gut aus. Quod erat demonstrandum. Seit 1975 fehlen in den meisten Testtexten die Zahlen, weswegen nach TypoGb. 204 § ab dem Jahr 2034 Zahlen in 86 der Texte zur Pflicht werden. Nichteinhaltung wird mit bis zu 245 € oder 368 \$ bestraft. Genauso wichtig in sind mittlerweile auch Âçcèñtë, die in neueren Schriften aber fast immer enthalten sind. Ein wichtiges aber schwierig zu integrierendes Feld sind OpenType-Funktionalitäten. Je nach Software und Voreinstellungen können eingebaute Kapitälchen, Kerning oder Ligaturen (sehr pfiffig) nicht richtig dargestellt werden.
-
-\begin{figure}
-  \centering
-  \includegraphics[width=0.9\textwidth]{fotos/a}
-  \caption{Ein Bär}
-\end{figure}
-
-Manchmal benutzt man Worte wie Hamburgefonts, Rafgenduks oder Handgloves, um Schriften zu testen. Manchmal Sätze, die alle Buchstaben des Alphabets enthalten - man nennt diese Sätze »Pangrams«. Sehr bekannt ist dieser: The quick brown fox jumps over the lazy old dog. Oft werden in Typoblindtexte auch fremdsprachige Satzteile eingebaut (AVAIL® and Wefox™ are testing aussi la Kerning), um die Wirkung in anderen Sprachen zu testen. In Lateinisch sieht zum Beispiel fast jede Schrift gut aus. Quod erat demonstrandum. Seit 1975 fehlen in den meisten Testtexten die Zahlen, weswegen nach TypoGb. 204 § ab dem Jahr 2034 Zahlen in 86 der Texte zur Pflicht werden. Nichteinhaltung wird mit bis zu 245 € oder 368 \$ bestraft. Genauso wichtig in sind mittlerweile auch Âçcèñtë, die in neueren Schriften aber fast immer enthalten sind. Ein wichtiges aber schwierig zu integrierendes Feld sind OpenType-Funktionalitäten. Je nach Software und Voreinstellungen können eingebaute Kapitälchen, Kerning oder Ligaturen (sehr pfiffig) nicht richtig dargestellt werden.
-
-An ihm kann man sehen, ob alle Buchstaben da sind und wie sie aussehen. Manchmal benutzt man Worte wie Hamburgefonts, Rafgenduks oder Handgloves, um Schriften zu testen. Manchmal Sätze, die alle Buchstaben des Alphabets enthalten - man nennt diese Sätze »Pangrams«. Sehr bekannt ist dieser: The quick brown fox jumps over the lazy old dog. Oft werden in Typoblindtexte auch fremdsprachige Satzteile eingebaut (AVAIL® and Wefox™ are testing aussi la Kerning), um die Wirkung in anderen Sprachen zu testen. In Lateinisch sieht zum Beispiel fast jede Schrift gut aus. Quod erat demonstrandum. Seit 1975 fehlen in den meisten Testtexten die Zahlen, weswegen nach TypoGb. 204 § ab dem Jahr 2034 Zahlen in 86 der Texte zur Pflicht werden. Nichteinhaltung wird mit bis zu 245 € oder 368 \$ bestraft. Genauso wichtig in sind mittlerweile auch Âçcèñtë, die in neueren Schriften aber fast immer enthalten sind. Ein wichtiges aber schwierig zu integrierendes Feld sind OpenType-Funktionalitäten. Je nach Software und Voreinstellungen können eingebaute Kapitälchen, Kerning oder Ligaturen (sehr pfiffig) nicht richtig dargestellt werden.
+\include{strukturseiten/info.tex}
+\include{strukturseiten/inhalt.tex}
+\include{strukturseiten/vorwort.tex}
 
 \mainmatter
-
 \include{kapitel/kapitel_1.tex}
-
 \include{kapitel/kapitel_2.tex}
 
-\cleartooddpage
- 
-\thispagestyle{empty}
-\listoffigures
-\cleartooddpage
-
-\thispagestyle{empty}
-\listoftables
-\cleartooddpage
+\include{strukturseiten/abbildungen.tex}
+\include{strukturseiten/tabellen.tex}
 
 \appendix
-
-\chapter{Kausalität}
-
-Dies ist ein Typoblindtext. An ihm kann man sehen, ob alle Buchstaben da sind und wie sie aussehen. Manchmal benutzt man Worte wie Hamburgefonts, Rafgenduks oder Handgloves, um Schriften zu testen. Manchmal Sätze, die alle Buchstaben des Alphabets enthalten - man nennt diese Sätze »Pangrams«. Sehr bekannt ist dieser: The quick brown fox jumps over the lazy old dog. Oft werden in Typoblindtexte auch fremdsprachige Satzteile eingebaut (AVAIL® and Wefox™ are testing aussi la Kerning), um die Wirkung in anderen Sprachen zu testen. In Lateinisch sieht zum Beispiel fast jede Schrift gut aus. Quod erat demonstrandum. Seit 1975 fehlen in den meisten Testtexten die Zahlen, weswegen nach TypoGb. 204 § ab dem Jahr 2034 Zahlen in 86 der Texte zur Pflicht werden. Nichteinhaltung wird mit bis zu 245 € oder 368 \$ bestraft. Genauso wichtig in sind mittlerweile auch Âçcèñtë, die in neueren Schriften aber fast immer enthalten sind. Ein wichtiges aber schwierig zu integrierendes Feld sind OpenType-Funktionalitäten. Je nach Software und Voreinstellungen können eingebaute Kapitälchen, Kerning oder Ligaturen (sehr pfiffig) nicht richtig dargestellt werden.
-
-Manchmal Sätze, die alle Buchstaben des Alphabets enthalten - man nennt diese Sätze »Pangrams«. Sehr bekannt ist dieser: The quick brown fox jumps over the lazy old dog. Oft werden in Typoblindtexte auch fremdsprachige Satzteile eingebaut (AVAIL® and Wefox™ are testing aussi la Kerning), um die Wirkung in anderen Sprachen zu testen. In Lateinisch sieht zum Beispiel fast jede Schrift gut aus. Quod erat demonstrandum. Seit 1975 fehlen in den meisten Testtexten die Zahlen, weswegen nach TypoGb. 204 § ab dem Jahr 2034 Zahlen in 86 der Texte zur Pflicht werden. Nichteinhaltung wird mit bis zu 245 € oder 368 \$ bestraft. Genauso wichtig in sind mittlerweile auch Âçcèñtë, die in neueren Schriften aber fast immer enthalten sind. Ein wichtiges aber schwierig zu integrierendes Feld sind OpenType-Funktionalitäten. Je nach Software und Voreinstellungen können eingebaute Kapitälchen, Kerning oder Ligaturen (sehr pfiffig) nicht richtig dargestellt werden.
+\include{anhang/kausalitaet.tex}
 
 \backmatter
 
