add merriweather as main font

--- a/strukturseiten/einstellungen.tex
+++ b/strukturseiten/einstellungen.tex
@@ -14,7 +14,7 @@
 %\usepackage{merriweather}
 %\usepackage{librecaslon} % Caslon font
 
-\setmainfont{Recia}
+\setmainfont{Merriweather}
 %\setsansfont{Author}
 %\setsansfont{Switzer} %zu modern
 %\setsansfont{Myriad Pro} %ziemlich fett
